Minor bugs solved: header added overflow: hidden, reduced transition time for background-hover.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -45,7 +45,8 @@ header {
   height: 100vh;
   position: relative;
   transition: 1.5s;
-  transition-timing-function: ease-out; }
+  transition-timing-function: ease-out;
+  overflow: hidden; }
   header #intro {
     position: relative;
     top: 50%;
@@ -79,7 +80,7 @@ header {
     width: 100%;
     height: 100%;
     top: 0;
-    transition: 1.5s; }
+    transition: 0.7s; }
   header h1,
   header h2,
   header p {
@@ -136,8 +137,8 @@ header {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: end;
-      justify-content: flex-end; }
+  -ms-flex-pack: start;
+      justify-content: flex-start; }
 
 .item-wrapper {
   background-image: url(../img/cup.png);
@@ -548,10 +549,12 @@ header {
 @keyframes cup2 {
   0% {
     opacity: 0;
-    right: -500px; }
+    transform: translateX(500px); }
   100% {
     opacity: 1;
-    right: 0; } }
+    transform: translateX(0); }
+  /*0% {opacity:0;right:-($cup-width-l);}
+    100%{opacity:1;right:0;}*/ }
 
 @keyframes intro {
   0% {
