--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -3,8 +3,10 @@
     100%{opacity:1;left:0;}
 }
 @keyframes cup2{
-    0% {opacity:0;right:-($cup-width-l);}
-    100%{opacity:1;right:0;}
+    0% {opacity:0;transform:translateX($cup-width-l);}
+    100%{opacity:1;transform:translateX(0);}
+    /*0% {opacity:0;right:-($cup-width-l);}
+    100%{opacity:1;right:0;}*/
 }
 @keyframes intro{
     0%{opacity:0;}
