--- a/app/scss/_pages.scss
+++ b/app/scss/_pages.scss
@@ -6,6 +6,7 @@
         position: relative;
         transition: 1.5s;
         transition-timing-function: ease-out;
+        overflow:hidden; //bitno da pri animaciji ne bi mrdala background slika zbog promene dimenzija
         #intro {
             @include vertical-align();
             text-align: center;
@@ -31,7 +32,7 @@
             width: 100%;
             height: 100%;
             top: 0;
-            transition: 1.5s;
+            transition: 0.7s;
         }
         h1,
         h2,
@@ -91,7 +92,7 @@
     #content-wrapper {
         display: flex;
         flex-wrap: wrap;
-        justify-content: flex-end; //mora da bi bili u prvoj koloni kada ih ima neparan broj
+        justify-content: flex-start; //mora da bi bili u prvoj koloni kada ih ima neparan broj
     }
 
     .item-wrapper {
